fix weird white space at bottom of page

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ button {
 
 .card-container  {
   width: 82%;
-  min-height: 280px;
+  min-height: 55vh;
   margin: 0px auto;
   padding: 30px 0px;
 }
